arreglando imagenes en recuerdos y peliculas

--- a/menu4_peliculas.html
+++ b/menu4_peliculas.html
@@ -32,7 +32,6 @@
           <h2 class="titulo">todas estas peliculas son bonitas por que las vi junto contigo mi amorcito</h2>
         </div>
     		<div class="contenedor_tarjeta">
-    			<a href="http://www.falconmasters.com">
     				<figure id="tarjeta">
     					<img src="assets/images/pelicula1.jpg" class="frontal" alt="">
     					<figcaption class="trasera">
@@ -45,7 +44,6 @@
     		</div>
 
     		<div class="contenedor_tarjeta">
-    			<a href="http://www.falconmasters.com">
     				<figure id="tarjeta">
     					<img src="assets/images/pelicula2.jpg" class="frontal" alt="">
     					<figcaption class="trasera">
@@ -58,7 +56,6 @@
     		</div>
 
     		<div class="contenedor_tarjeta">
-    			<a href="http://www.falconmasters.com">
     				<figure id="tarjeta">
     					<img src="assets/images/pelicula3.jpg" class="frontal" alt="">
     					<figcaption class="trasera">
@@ -70,7 +67,6 @@
     			</a>
     		</div>
         <div class="contenedor_tarjeta">
-    			<a href="http://www.falconmasters.com">
     				<figure id="tarjeta">
     					<img src="assets/images/pelicula4.jpg" class="frontal" alt="">
     					<figcaption class="trasera">
@@ -82,7 +78,6 @@
     			</a>
     		</div>
         <div class="contenedor_tarjeta">
-    			<a href="http://www.falconmasters.com">
     				<figure id="tarjeta">
     					<img src="assets/images/pelicula5.jpg" class="frontal" alt="">
     					<figcaption class="trasera">
@@ -94,7 +89,6 @@
     			</a>
     		</div>
         <div class="contenedor_tarjeta">
-    			<a href="http://www.falconmasters.com">
     				<figure id="tarjeta">
     					<img src="assets/images/pelicula6.jpg" class="frontal" alt="">
     					<figcaption class="trasera">
@@ -106,7 +100,6 @@
     			</a>
     		</div>
         <div class="contenedor_tarjeta">
-    			<a href="http://www.falconmasters.com">
     				<figure id="tarjeta">
     					<img src="assets/images/pelicula7.jpg" class="frontal" alt="">
     					<figcaption class="trasera">
@@ -118,7 +111,6 @@
     			</a>
     		</div>
         <div class="contenedor_tarjeta">
-    			<a href="http://www.falconmasters.com">
     				<figure id="tarjeta">
     					<img src="assets/images/pelicula8.jpg" class="frontal" alt="">
     					<figcaption class="trasera">
@@ -130,9 +122,8 @@
     			</a>
     		</div>
         <div class="contenedor_tarjeta">
-    			<a href="http://www.falconmasters.com">
     				<figure id="tarjeta">
-    					<img src="assets/images/pelicula9.JPG" class="frontal" alt="">
+    					<img src="assets/images/pelicula9.jpg" class="frontal" alt="">
     					<figcaption class="trasera">
     						<h2 class="titulo">amor miramos pelicula!!!</h2>
     						<hr>
