modificando erores en recuerdos y peliculas

--- a/menu2_recuerdos.html
+++ b/menu2_recuerdos.html
@@ -16,7 +16,7 @@
 					<figcaption class="trasera">
 						<h2 class="titulo">te amo brayan umiyauri ilachoque</h2>
 						<hr>
-						<p>tu eres la persona que me flechaste el corazon con esos tiernos ojos me hechizaste la mirada.</p>
+						<p> eres la persona que me flechaste el corazon con esos tiernos ojos me hechizaste la mirada.</p>
 					</figcaption>
 				</figure>
 			</a>
